# vi-dubber

./: .gitignore  LICENSE  README.md  Ytdlp.ipynb  pyproject.toml  requirements.txt
vi_dubber/: __init__.py  __main__.py  cli.py  download.py  merge.py  subtitle.py  tts.py
